tests/NormalTests/paczka1/small_fuzzy/83369154.err
Error in line 2: ee4LaZjbni5 S734 69,5
Error in line 1: xlfBaErg0 S734 92,7
Error in line 15: xlfBaErg0 A518 99,8
